syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "client.proto";

option csharp_namespace = "AElf.Client.LatchBox.LockTokenVault";

message AddLockInput {
    string token_symbol = 1;
    int64 total_amount = 2;
    google.protobuf.Timestamp unlock_time = 3;
    bool is_revocable = 4;
    repeated AddLockReceiverInput receivers = 5;
    string remarks = 6;
}

message AddLockReceiverInput {
    client.Address receiver = 1;
    int64 amount = 2;
}

message ClaimLockInput {
    int64 lock_id = 1;
}

message RevokeLockInput {
    int64 lock_id = 1;
}

message ClaimRefundInput {
    string token_symbol = 1 ;
}

message Lock {
    int64 lock_id = 1;
    string token_symbol = 2;
    client.Address initiator = 3;
    int64 total_amount = 4;
    google.protobuf.Timestamp creation_time = 5;
    google.protobuf.Timestamp start_time = 6;
    google.protobuf.Timestamp unlock_time = 7;
    bool is_revocable = 8;
    bool is_revoked = 9;
    bool is_active = 10;
    string remarks = 11;
}

message LockReceiver {
    client.Address receiver = 1;
    int64 amount = 2;
    google.protobuf.Timestamp date_claimed = 3;
    google.protobuf.Timestamp date_revoked = 4;
    bool is_active = 5;
}

message Refund {
    string token_symbol = 1;
    int64 amount = 2;
}

message RefundList {
    repeated Refund refunds = 1;
}

message LockAssetCounter {
    int64 locked_amount = 1;
    int64 unlocked_amount = 2;
}

message LockAssetCounterTokenSymbolList {
    repeated string token_symbols = 1;
}

message LockIdList {
    repeated int64 ids = 1;
}

message LockReceiverAddressList {
    repeated client.Address receivers = 1;
}

message AddLockOuput {
    int64 lock_id = 1;
}

message GetLockTransactionOutput {
    Lock lock = 1;
    repeated LockReceiver receivers = 2;
}

message GetLockListOutput {
    repeated Lock locks = 1;
}

message GetLockTransactionForReceiverOutput {
    Lock lock = 1;
    LockReceiver receiver = 2;
}

message GetLockReceiverListOutput {
    repeated GetLockTransactionForReceiverOutput lock_transactions = 1; 
}

message GetRefundListOutput {
    repeated Refund refunds = 1;
}

message GetLockAssetCounterOutput {
    string token_symbol = 1;    
    int64 locked_amount = 2;
    int64 unlocked_amount = 3; 
}

message GetLockAssetCounterListOutput {
    repeated GetLockAssetCounterOutput assets = 1;
}